--- a/css/europe/styleEurope.css
+++ b/css/europe/styleEurope.css
@@ -8,7 +8,8 @@
 
 body {
 	
-			font-family : "Aaargh", sans-serif ;
+	font-family : "Aaargh", sans-serif ;
+	background-image : url("../../images/europe/vaisseau.png") ;
 	
 }
 
