--- a/css/styleChine.css
+++ b/css/styleChine.css
@@ -20,8 +20,9 @@ h1 {
 
 p {
 	
-	text-align : center ;
-	font-size : 1.5em ;
+	text-align : justify ;
+    font-size : 1.5em ;
+    margin-left: 6em;
 
 }
 
@@ -35,18 +36,11 @@ img {
 	
 }
 
-button {
-	text-align: center;
-	color: white;
-	text-decoration : none ;
-	background-color: #242e3f ;
-	border: none;
-	padding: 0.5em 2.5em ;
-	text-align: center;
-	font-size: 16px;
-	border-radius: 30px 30px 30px 30px ;
-	margin-left : 325px ;
-	margin-top : 100px ;
-	transition-property : background-color, opacity ;
-	transition-duration : 1s ;
+#choix {
+    margin-top: 5em;
+    display: flex;
+}
+
+.options {
+    margin: auto;
 }
