Plus qu'à ajouter la redirection sur la dernière page des usa !

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 
 body {
 	
-	background : url(../images/buzz4K.jpg) no-repeat center fixed;
+	background : url(../images/usa/buzz4K.jpg) no-repeat center fixed;
 	background-size: cover;
 	font-family : "Aaargh", sans-serif ;
 	
