--- a/css/style2.css
+++ b/css/style2.css
@@ -8,7 +8,7 @@
 
 body {
 	
-	background : url(../images/module.png) no-repeat center fixed;
+	background : url(../images/usa/module.png) no-repeat center fixed;
 	background-size: cover;
 	font-family : "Aaargh", sans-serif ;
 	
