--- a/css/style2.css
+++ b/css/style2.css
@@ -33,7 +33,7 @@ a {
 	
     background-color : #17a2b8 ;
 	display : flex ;
-	margin-left : 10em ;
+	margin : auto ;
     width : 55em ;
     border-radius: 4px 4px 4px 4px;
     display: flex;
