--- a/css/usa/styleUSA.css
+++ b/css/usa/styleUSA.css
@@ -43,6 +43,9 @@ aside img{
   height: 25px;
   display: block;
 }
+a {
+	text-decoration:none;
+}
 .petitdiv{
   display: inline-block;
   color: white;
@@ -56,8 +59,18 @@ aside img{
   text-align: center;
 
 }
+.di {
+	margin-left:50%;
+	
+}
+.imgBtn {
+	margin-left:50%;
+}
 .petitdiv:hover{
-  background-color: yellow;
+	opacity : 1 ;
+	  color: #fff;
+  background-color: #138496;
+  border-color: #117a8b;
   color : black;
   text-decoration: none;
 }
